# irrpoly

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  checker.hpp  gf.hpp  main.cpp  polynomial.hpp  polynomialgf.hpp  test_prog.nb
cmake/: analyze.cmake  currdir.cmake  pthread.cmake  pvs-studio.cmake  sources.cmake  subdirs.cmake  thread.cmake
docs/: Doxyfile  pseudocode.tex
docs/html/: annotated.html  checker_8hpp.html  checker_8hpp_source.html  classchecker-members.html  classchecker.html  classchecker_1_1control__type-members.html  classchecker_1_1control__type.html  classdetail_1_1sync-members.html  classdetail_1_1sync.html  classdropbox_1_1oxygen_1_1nn-members.html  classdropbox_1_1oxygen_1_1nn.html  classdropbox_1_1oxygen_1_1nn__enable__shared__from__this-members.html  classdropbox_1_1oxygen_1_1nn__enable__shared__from__this.html  classes.html  classgf-members.html  classgf.html  classirrpoly_1_1checker-members.html  classirrpoly_1_1checker.html  classirrpoly_1_1detail_1_1sync-members.html  classirrpoly_1_1detail_1_1sync.html  classirrpoly_1_1gf-members.html  classirrpoly_1_1gf.html  classirrpoly_1_1gfbase-members.html  classirrpoly_1_1gfbase.html  classirrpoly_1_1gfn-members.html  classirrpoly_1_1gfn.html  classirrpoly_1_1gfpoly-members.html  classirrpoly_1_1gfpoly.html  classirrpoly_1_1multithread_1_1pipeline-members.html  classirrpoly_1_1multithread_1_1pipeline.html  classirrpoly_1_1polynomial-members.html  classirrpoly_1_1polynomial.html  classpolynomial-members.html  classpolynomial.html  dir_a47f288b95001ef386fb9b537ec42d10.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  (+53 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  (+58 more)
examples/: CMakeLists.txt
examples/general/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
examples/tms/: CMakeLists.txt  main.cpp
html/: index.html
include/: irrpoly.h  irrpoly.hpp
include/irrpoly/: checker.hpp  gf.hpp  gfcheck.hpp  gfpoly.hpp  nn.hpp  pipeline.hpp  polynomial.hpp  polynomialgf.hpp  version.hpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  catch.hpp  main.cpp
tests/flint/: CMakeLists.txt  README.md  main.cpp
tests/unit/: CMakeLists.txt  catch.hpp  main.cpp
tests/wolfram/: CMakeLists.txt  README.md  main.cpp  output  verify.wls
tools/: Doxyfile  Makefile
(+38 files in other folders)
